--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@ placeholder="Ej:11111111">
 <button onclick="limpiarCampos()">Limpiar</button>
 </div>
 
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
