--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
     <p>copyright© 2025 Zeled Labs - Todos los derechos reservados</p>
   </footer>
 
-  <script src="conversor.js"></script>
+  <script src="script.js" defer></script>
 
 
 </body>
 </html>
+
